# glide

./: ARCHITECTURE.md  Cargo.toml
examples/: devtool.rs
site/: package-lock.json  package.json
site/src/content/docs/reference/: config.mdx
src/: actor.rs
src/actor/: app.rs  dock.rs  layout.rs  notification_center.rs  reactor.rs  space_manager.rs  status.rs  window_server.rs  wm_controller.rs
src/actor/reactor/: main_window.rs  testing.rs
src/model/: layout_tree.rs
src/sys/: screen.rs  window_server.rs
src/ui/: status_bar.rs
